Fixed Footer visibility

--- a/src/styles/app/controls/_buttons.scss
+++ b/src/styles/app/controls/_buttons.scss
@@ -40,7 +40,7 @@ html.notmobile {
 
 .social-icons {
     .sprite {
-        background: url('images/social.png') no-repeat;
+        background: url('../images/social.png') no-repeat;
         width: 35px;
         height: 34px;
         display: block;
